--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,9 +10,9 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "master" ]
 
 jobs:
   build:
@@ -32,4 +32,6 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build and Execute Tests
-      run: mvn clean test -Dtest=RuleBasedJoinOrderPickerTest
+      run:
+        cd h2
+        mvn clean test -Dtest=RuleBasedJoinOrderPickerTest
