--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,6 +32,6 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build and Execute Tests
-      run:
+      run: |
         cd h2
         mvn clean test -Dtest=RuleBasedJoinOrderPickerTest
